Added image file paths. Need to get drawables to work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">QuizGame</string>
     <string name="title">Animal Memory Game</string>
-    <string name="score">Score: </string>
-    <string name="time">Time: </string>
+    <string name="score">Score: 0</string>
+    <string name="time">Time: 0</string>
     <string name="reset">Reset</string>
 
 </resources>
